# cmake_moduler_project_sample

./: .gitconfig  .gitignore  LICENSE  README.md  README_COMPONENTS_ONLY.md  README_HEADERS_ONLY.md  docker-compose.yml  enact-build-install-all-in-one.sh  version.md
.devcontainer/: .onCreateCommandMarker  .postCreateCommandMarker  .postStartCommandMarker  .updateContentCommandMarker  devcontainer.json  launch.json  post-create.sh  post-start.sh
.devcontainer/postCommands/: post-create.sh
CMakeListsTmplates/InUse/applications/: CMakeLists.txt  uninstall_apps.cmake copy.in
CMakeListsTmplates/InUse/features/: CMakeLists copy 3.txt  CMakeLists.txt
CMakeListsTmplates/InUse/in_between/: CMakeLists.txt
CMakeListsTmplates/InUse/root/: CMakeLists copy.txt  CMakeLists.txt
CMakeListsTmplates/add_all_subdirectory/no_exclude/: CMakeLists.txt
CMakeListsTmplates/applications/leafs/: CMakeLists.txt
CMakeListsTmplates/applications/root/: CMakeLists.txt
CMakeListsTmplates/feature/: CMakeLists.txt
CMakeListsTmplates/features/leafs/: CMakeLists.txt
CMakeListsTmplates/features/root/: CMakeLists.txt
CMakeListsTmplates/making_of/features/link_extra_comment_added/: CMakeLists.txt
CMakeListsTmplates/making_of/for_reference_from_other_procects/cmakelists/: CMakeLists.txt  cmake_uninstall.cmake.in
CMakeListsTmplates/making_of/in_between/add_all_subdirectory_add_dependency/: CMakeLists.txt
ModularProject/: CMakeLists.txt
ModularProject/applications/: CMakeLists.txt
ModularProject/applications/groupB/app2/: CMakeLists.txt  main.cpp
ModularProject/applications/groupB/app3/: CMakeLists.txt  main.cpp  main_app3.cpp
ModularProject/features/: CMakeLists.txt  Config.cmake.in
ModularProject/features/group1/feature2/: CMakeLists.txt
SampleProjectSimple0000/applications/: uninstall_apps.cmake.in
SampleProjectSimple0000/features/: CMakeLists.txt
SampleProjectSimple0000/features/group2/: CMakeLists.txt
SampleProjectSimple01/applications/: CMakeLists.txt
SampleProjectSimple01/applications/app1/: CMakeLists.txt  main.cpp
SampleProjectSimple01/applications/app2/: CMakeLists.txt
SampleProjectSimple01/applications/groupB/: CMakeLists.txt
SampleProjectSimple01/features/: CMakeLists.txt
SampleProjectSimple01/features/feature1/: CMakeLists.txt  main.cpp
SampleProjectSimple01/features/feature2/: CMakeLists.txt
SampleProjectSimple01/features/feature3/: CMakeLists.txt  main_feature3.cpp
SampleProjectSimple02/applications/: CMakeLists.txt
SampleProjectSimple02/applications/app1/: CMakeLists.txt
SampleProjectSimple02/features/: CMakeLists.txt
SampleProjectSimple02/features/feature2/: feature2.hpp
SampleProjectSimple02/features/feature3/: CMakeLists.txt
applications/sample_application/: CMakeLists.txt  cmake_uninstall.cmake.in
components/cmakelists_templates/leaf_template/: CMakeLists.txt
components/sample_components/: CMakeLists.txt  Config.cmake.in
components/sample_components/component1/: CMakeLists.txt  component1.hpp  main.cpp
components_only/: README.md  README_COMPONENTS_ONLY.md
dockerfile/: Dockerfile.014  Dockerfile.015
headers_only/: build-install-all-in-one.sh
headers_only/header_only/previous_works/: CMakeLists.txt
moc_destination/include/mypr_feature3/: feature3.hpp
old/01/CMakeListsTmplates/making_of/root_aggregate/: CMakeLists.txt
old/02/CMakeListsTmplates/: CMakeLists.txt
old/02/CMakeListsTmplates/templates/applications/leafs/: CMakeLists.txt
old/02/CMakeListsTmplates/templates/features/leafs/: CMakeLists.txt
old/02/CMakeListsTmplates/templates/features/root/: CMakeLists.txt
old/04/: README.md
old/04/project_template/: CMakeLists.txt
old/04/project_template/header_only/: CMakeLists.txt
old/04/project_template/header_only/sample_header_only/: CMakeLists.txt
old/05/project_template/: CMakeLists.txt
old/05/project_template/applications/sample_application/: CMakeLists.txt  main.cpp
old/05/project_template/components/: CMakeLists.txt
old/05/project_template/components/aggregate/: CMakeLists.txt  aggregate.hpp
old/05/project_template/components/sample_header_only/: CMakeLists.txt
old/05/sample_cliant_to_project_template/: main.cpp
old/06/project_template/: CMakeLists.txt  README.md
old/06/project_template/components/aggregate/: CMakeLists.txt
old/07/project_template/: CMakeLists.txt
old/07/project_template/applications/sample_application/: CMakeLists.txt  main.cpp
old/07/project_template/header_only/: CMakeLists.txt
old/08/project_template/components/sample_component/: CMakeLists.txt  sample_component.cpp
old/10/applications_only/applications/: CMakeLists.txt
old/10/project_template/applications/sample_application/: CMakeLists.txt
old/10/sample_cliant_to_components_only/: CMakeLists.txt  main.cpp
old/12/sample_all_combined/: CMakeLists.txt
old/12/sample_all_combined/components/: CMakeLists.txt
old/ModularProject/: CMakeLists.txt
old/ModularProject/applications/: CMakeLists.txt
old/ModularProject/features/: CMakeLists.txt
project_template/: CMakeLists.txt  README.md  project.top-1.2.5.txt
project_template/applications/sample_application/: SettingAppsBottom.cmake  applications.bottom-1.3.3.txt  main.cpp
project_template/applications/utility/cmakelists_copy/: CMakeLists.txt  cmakelists_copy_functions.cpp  cmakelists_copy_functions.hpp  main.cpp
project_template/components/aggregate/: aggregate.hpp
project_template/components/sample_component/: CMakeLists.txt  SettingComponentsLeaf.cmake  components.leaf-1.2.5.cmake  parts_of_component.cpp  parts_of_component.hpp  sample_component.cpp
project_template/components/sample_header_only/: sample_header_only.hpp
project_template/header_only/kkd/: cout_from_command.hpp  (+1 more)
sample_cliant_to_project_template/: CMakeLists.txt  main.cpp
templates/: README.md
templates/applications_only/: README.md
templates/components_only/: README.md
templates/headers_only/header_only/: CMakeLists.txt
templates/headers_only/header_only/examples/: CMakeLists.txt
templates/headers_only/header_only/tests/: test_dummy.cpp
(+115 files in other folders)
